--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,6 +36,8 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.1"
-  }
+    "cross-env": "^7.0.1",
+    "gh-pages": "^2.2.0"
+  },
+  "homepage": "http://zpfh1014.github.io/react-tutorial-webtoon"
 }
